# rst4qt

./: .pylintrc  README.rst  setup.cfg
.circleci/: config.yml  dependencies.perl
debian/: changelog  control  copyright  rules
pyqt5_rst/: __init__.py  doctree2qt.py  qrsttextdocument.py  qrsttextedit.py  qt2doctree.py  table_builder.py
rst4qt/: __init__.py  doctree2qt.py  qrsttextdocument.py  qrsttextedit.py  qt2doctree.py
