[metadata]
name = PyQt5-rst
author = s0600204
description = attr: pyqt5_rst.__doc__
#~ long_description = file: README.rst

# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Planning

    Intended Audience :: Developers

    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: reStructuredText

    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

    Environment :: X11 Applications :: Qt

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = pyqt5_rst
python_requires = >= 3.7
install_requires =
    docutils
    PyQt5
    rst2rst > 0.4
